hard-gists/9875468/run.log
=== Docker Run Log for 9875468 ===
Started at: Mi 29. Okt 18:33:58 CET 2025

[2025-10-29 18:33:58] START: Running container for 9875468
[2025-10-29 18:33:59] SUCCESS: Container e7584d88c50fd8d86346f4a229c2c9c39ca6724faa002b2dbc010bc0efd64b8e started for 9875468
=== Container logs for 9875468 ===
  File "/snippet.py", line 115
    print cmd 
    ^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 9875468 ===
[2025-10-29 18:34:01] INFO: Container e7584d88c50fd8d86346f4a229c2c9c39ca6724faa002b2dbc010bc0efd64b8e has stopped
